# pcl-android-sample

./: README.md  local.properties
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: jni_hellopcl.cpp  jni_hellopcl.h
app/src/main/java/tw/com/hellopcl/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
